--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,26 @@ dependencies = [
     "numpy",
     "pytest>=8",
     "regex>=2024.11.6",
+#    "torch==2.8.0; sys_platform == 'linux' or sys_platform == 'win32'",
     "torch~=2.6.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
     "torch~=2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'", # Intel Macs
     "tqdm>=4.67.1",
     "wandb>=0.19.7",
     "pandas>=2",
     "ty>=0.0.1a16",
+    "triton-windows==3.2.0.post18",
+    "tabulate>=0.9.0",
 ]
+
+
+[[tool.uv.index]]
+name = "pytorch-cu126"
+url = "https://download.pytorch.org/whl/cu126"
+explicit = true
+
+#name = "pytorch-cu128"
+#url = "https://download.pytorch.org/whl/cu128"
+#explicit = true  # Ensures only torch-related packages are pulled from this index
 
 [build-system]
 requires = ["uv_build>=0.8.3,<0.9.0"]
@@ -33,6 +46,10 @@ python-preference = "managed"
 
 [tool.uv.sources]
 cs336-basics = { path = "./cs336-basics", editable = true }  # Change this path to your assignment1-basics repo you want to use your own implementation!
+torch = [
+    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
+#    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
+]
 
 
 
